Scrollbar fixed

--- a/src/App.css
+++ b/src/App.css
@@ -150,8 +150,8 @@ h2 {
   align-items: center;
 }
 
-::-webkit-scrollbar,
-::-webkit-scrollbar-track {
+.cards-container::-webkit-scrollbar,
+.cards-container::-webkit-scrollbar-track {
   position: absolute;
   top: -10000000px;
 }
